--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
+    "cordova-browser": "5.0.3",
     "cordova-plugin-camera": "^4.0.2",
     "cordova-plugin-device": "^2.0.1",
     "cordova-plugin-file": "^6.0.1",
@@ -62,7 +63,8 @@
       "cordova-plugin-file": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
