--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "face_recog_app",
+  "name": "FaceRecognition",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Émerson Silva & Luís Eduardo",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
@@ -49,7 +49,7 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project",
+  "description": "An face recognition app, using a trained neural network",
   "cordova": {
     "plugins": {
       "cordova-plugin-camera": {},
